--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
           <video autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/task_Change_Lamp_Direction_2023-10-08-02-54-38.mp4"
-                    type="video/mp4">
+            <source src="demo/vids/i1_fix.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
-            Change lamp light direction
+            Fix camera at Intersection 1
           </p>
         </div>
       </div>
