--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="Car Gaussian">
   <meta name="keywords" content="Car, Gaussian Splatting">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GenBot</title>
+  <title>CarGaussian</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -61,7 +61,43 @@
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
           <video autoplay controls muted loop playsinline height="100%">
-            <source src="demo/vids/i1_fix.mp4" type="video/mp4">
+            <source src="./demo/vids/i1_fix.mp4" type="video/mp4">
+          </video>
+          <p style="text-align:center;">
+            Fix camera at Intersection 1
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered">
+      <div class="column" style="padding-left: 2px; padding-right: 2px;">
+        <div class="content">
+          <video autoplay controls muted loop playsinline height="100%">
+            <source src="./demo/vids/i1.mp4" type="video/mp4">
+          </video>
+          <p style="text-align:center;">
+            Fix camera at Intersection 1
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered">
+      <div class="column" style="padding-left: 2px; padding-right: 2px;">
+        <div class="content">
+          <video autoplay controls muted loop playsinline height="100%">
+            <source src="./demo/vids/i2_fix.mp4" type="video/mp4">
+          </video>
+          <p style="text-align:center;">
+            Fix camera at Intersection 1
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered">
+      <div class="column" style="padding-left: 2px; padding-right: 2px;">
+        <div class="content">
+          <video autoplay controls muted loop playsinline height="100%">
+            <source src="./demo/vids/i2.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
             Fix camera at Intersection 1
