--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 <section class="section">
   <div class="container is-fullhd">
 
-
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Generated Tasks and Learned Skills</h2>
+        <h3 class="title is-3">Results</h3>
       </div>
     </div>
     <br>
@@ -61,20 +60,20 @@
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
           <video autoplay controls muted loop playsinline height="100%">
-            <source src="./demo/vids/i1_fix.mp4" type="video/mp4">
+            <source src="./demo/vids_hi/i1_fix.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
-            Fix camera at Intersection 1
+            Fixed camera at Intersection 1
           </p>
         </div>
       </div>
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
           <video autoplay controls muted loop playsinline height="100%">
-            <source src="./demo/vids/i1.mp4" type="video/mp4">
+            <source src="./demo/vids_hi/i1.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
-
+            Orbiting camera at Intersection 1
           </p>
         </div>
       </div>
@@ -84,10 +83,10 @@
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
           <video autoplay controls muted loop playsinline height="100%">
-            <source src="./demo/vids/i2_fix.mp4" type="video/mp4">
+            <source src="./demo/vids_hi/i2_fix.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
-            Fix camera at Intersection 2
+            Fixed camera at Intersection 2
           </p>
         </div>
       </div>
@@ -97,15 +96,174 @@
             <source src="./demo/vids/i2.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
-
+            Orbiting camera at Intersection 2
           </p>
         </div>
       </div>
     </div>
 
+    <div class="columns is-centered">
+      <div class="column" style="padding-left: 2px; padding-right: 2px;">
+        <div class="content">
+          <video autoplay controls muted loop playsinline height="100%">
+            <source src="./demo/vids_hi/i3_fix.mp4" type="video/mp4">
+          </video>
+          <p style="text-align:center;">
+            Fixed camera at Intersection 3
+          </p>
+        </div>
+      </div>
+      <div class="column" style="padding-left: 2px; padding-right: 2px;">
+        <div class="content">
+          <video autoplay controls muted loop playsinline height="100%">
+            <source src="./demo/vids/i3.mp4" type="video/mp4">
+          </video>
+          <p style="text-align:center;">
+            Orbiting camera at Intersection 3
+          </p>
+        </div>
+      </div>
   </div>
-</section>
 
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/i4_fix.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Fixed camera at Intersection 4
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids/i4.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 4
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/i5_fix.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Fixed camera at Intersection 5
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids/i5.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 5
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/i6_fix.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Fixed camera at Intersection 6
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids/i6.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 6
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/i7_fix.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Fixed camera at Intersection 7
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids/i7.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 7
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/i8_fix.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Fixed camera at Intersection 8
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids/i8.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 8
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/i9_fix.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Fixed camera at Intersection 9
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids/i9.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 9
+        </p>
+      </div>
+    </div>
+  </div>
+
+</section>
 
 </body>
 </html>
