--- a/index.html
+++ b/index.html
@@ -263,6 +263,105 @@
     </div>
   </div>
 
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i3_fix.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Fixed camera at Intersection 10
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids/qxw_i3.mp4" type="video/mp4">
+        </video>
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 10
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <img src="./demo/vids_hi/qxw_i4_fix.mp4" alt="qxw_i4_fix" style="width:100%">
+        <p style="text-align:center;">
+          Fixed camera at Intersection 11
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content">
+        <img src="./demo/vids/qxw_i4.mp4" alt="qxw_i4" style="width:100%">
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 11
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content" style="text-align:center;">
+        <img src="./demo/vids_hi/qxw_i5_fix.mp4" alt="qxw_i5_fix" style="width:100%">
+        <p style="text-align:center;">
+          Fixed camera at Intersection 12
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content" style="text-align:center;">
+        <img src="./demo/vids/qxw_i5.mp4" alt="qxw_i5" style="width:100%">
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 12
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
+      <div class="content">
+        <img src="./demo/vids_hi/qxw_i6_fix.mp4" alt="qxw_i6_fix" style="width:100%">
+        <p style="text-align:center;">
+          Fixed camera at Intersection 13
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
+      <div class="content">
+        <img src="./demo/vids/qxw_i6.mp4" alt="qxw_i6" style="width:100%">
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 13
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
+      <div class="content">
+        <img src="./demo/vids_hi/qxw_i7_fix.mp4" alt="qxw_i7_fix" style="width:100%">
+        <p style="text-align:center;">
+          Fixed camera at Intersection 14
+        </p>
+      </div>
+    </div>
+    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
+      <div class="content">
+        <img src="./demo/vids/qxw_i7.mp4" alt="qxw_i7" style="width:100%">
+        <p style="text-align:center;">
+          Orbiting camera at Intersection 14
+        </p>
+      </div>
+    </div>
+  </div>
+
 </section>
 
 </body>
