--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
           <video autoplay controls muted loop playsinline height="100%">
-            <source src="./demo/vids/i2.mp4" type="video/mp4">
+            <source src="./demo/vids_hi/i2.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
             Orbiting camera at Intersection 2
@@ -116,7 +116,7 @@
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
           <video autoplay controls muted loop playsinline height="100%">
-            <source src="./demo/vids/i3.mp4" type="video/mp4">
+            <source src="./demo/vids_hi/i3.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
             Orbiting camera at Intersection 3
@@ -139,7 +139,7 @@
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
         <video autoplay controls muted loop playsinline height="100%">
-          <source src="./demo/vids/i4.mp4" type="video/mp4">
+          <source src="./demo/vids_hi/i4.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 4
@@ -162,7 +162,7 @@
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
         <video autoplay controls muted loop playsinline height="100%">
-          <source src="./demo/vids/i5.mp4" type="video/mp4">
+          <source src="./demo/vids_hi/i5.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 5
@@ -185,7 +185,7 @@
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
         <video autoplay controls muted loop playsinline height="100%">
-          <source src="./demo/vids/i6.mp4" type="video/mp4">
+          <source src="./demo/vids_hi/i6.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 6
@@ -208,7 +208,7 @@
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
         <video autoplay controls muted loop playsinline height="100%">
-          <source src="./demo/vids/i7.mp4" type="video/mp4">
+          <source src="./demo/vids_hi/i7.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 7
@@ -231,7 +231,7 @@
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
         <video autoplay controls muted loop playsinline height="100%">
-          <source src="./demo/vids/i8.mp4" type="video/mp4">
+          <source src="./demo/vids_hi/i8.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 8
@@ -254,7 +254,7 @@
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
         <video autoplay controls muted loop playsinline height="100%">
-          <source src="./demo/vids/i9.mp4" type="video/mp4">
+          <source src="./demo/vids_hi/i9.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 9
@@ -277,7 +277,7 @@
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
         <video autoplay controls muted loop playsinline height="100%">
-          <source src="./demo/vids/qxw_i3.mp4" type="video/mp4">
+          <source src="./demo/vids_hi/qxw_i3.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 10
@@ -297,7 +297,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <img src="./demo/vids/qxw_i4.mp4" alt="qxw_i4" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i4.mp4" alt="qxw_i4" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 11
         </p>
@@ -316,7 +316,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content" style="text-align:center;">
-        <img src="./demo/vids/qxw_i5.mp4" alt="qxw_i5" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i5.mp4" alt="qxw_i5" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 12
         </p>
@@ -335,7 +335,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
       <div class="content">
-        <img src="./demo/vids/qxw_i6.mp4" alt="qxw_i6" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i6.mp4" alt="qxw_i6" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 13
         </p>
@@ -354,7 +354,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
       <div class="content">
-        <img src="./demo/vids/qxw_i7.mp4" alt="qxw_i7" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i7.mp4" alt="qxw_i7" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 14
         </p>
