--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
   </div>
 </section>
 
+<!-- add a teaser mp4 video -->
+<section class="section">
+  <div class="container is-fullhd">
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
+        <div class="content">
+          <video autoplay controls muted loop playsinline height="100%">
+            <source src="./demo/vids_hi/teaser.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <div class="container is-fullhd">
   <hr class="solid">
 </div>
