--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i4_fix.mp4" alt="qxw_i4_fix" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i4_fix.mp4" style="width:100%">
         <p style="text-align:center;">
           Fixed camera at Intersection 11
         </p>
@@ -313,7 +313,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i4.mp4" alt="qxw_i4" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i4.mp4" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 11
         </p>
@@ -324,7 +324,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content" style="text-align:center;">
-        <img src="./demo/vids_hi/qxw_i5_fix.mp4" alt="qxw_i5_fix" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i5_fix.mp4" style="width:100%">
         <p style="text-align:center;">
           Fixed camera at Intersection 12
         </p>
@@ -332,7 +332,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content" style="text-align:center;">
-        <img src="./demo/vids_hi/qxw_i5.mp4" alt="qxw_i5" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i5.mp4" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 12
         </p>
@@ -343,7 +343,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i6_fix.mp4" alt="qxw_i6_fix" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i6_fix.mp4" style="width:100%">
         <p style="text-align:center;">
           Fixed camera at Intersection 13
         </p>
@@ -351,7 +351,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i6.mp4" alt="qxw_i6" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i6.mp4" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 13
         </p>
@@ -362,7 +362,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i7_fix.mp4" alt="qxw_i7_fix" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i7_fix.mp4" style="width:100%">
         <p style="text-align:center;">
           Fixed camera at Intersection 14
         </p>
@@ -370,7 +370,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i7.mp4" alt="qxw_i7" style="width:100%">
+        <img src="./demo/vids_hi/qxw_i7.mp4" style="width:100%">
         <p style="text-align:center;">
           Orbiting camera at Intersection 14
         </p>
