--- a/index.html
+++ b/index.html
@@ -305,7 +305,9 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i4_fix.mp4" style="width:100%">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i4_fix.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Fixed camera at Intersection 11
         </p>
@@ -313,7 +315,9 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i4.mp4" style="width:100%">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i4.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 11
         </p>
@@ -323,16 +327,20 @@
 
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
-      <div class="content" style="text-align:center;">
-        <img src="./demo/vids_hi/qxw_i5_fix.mp4" style="width:100%">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i5_fix.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Fixed camera at Intersection 12
         </p>
       </div>
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
-      <div class="content" style="text-align:center;">
-        <img src="./demo/vids_hi/qxw_i5.mp4" style="width:100%">
+      <div class="content">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i5.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 12
         </p>
@@ -341,17 +349,21 @@
   </div>
 
   <div class="columns is-centered">
-    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
-      <div class="content">
-        <img src="./demo/vids_hi/qxw_i6_fix.mp4" style="width:100%">
+    <div class="column" style="padding-left: 2px; padding-right: 2px;">
+      <div class="content" style="padding-bottom: 0px;">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i6_fix.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Fixed camera at Intersection 13
         </p>
       </div>
     </div>
-    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
+    <div class="column" style="padding-left: 2px; padding-right: 2px; padding-bottom: 0px;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i6.mp4" style="width:100%">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i6.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 13
         </p>
@@ -359,18 +371,22 @@
     </div>
   </div>
 
-  <div class="columns is-centered">
-    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
-      <div class="content">
-        <img src="./demo/vids_hi/qxw_i7_fix.mp4" style="width:100%">
+  <div class="columns is-centered" style="padding-top: 0px;">
+    <div class="column" style="padding-left: 2px; padding-right: 2px; padding-top: 0px;">
+      <div class="content" style="padding-bottom: 0px;">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i7_fix.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Fixed camera at Intersection 14
         </p>
       </div>
     </div>
-    <div class="column" style="padding-left: 2px; padding-right: 2px; text-align:center;">
+    <div class="column" style="padding-left: 2px; padding-right: 2px; padding-top: 0px;">
       <div class="content">
-        <img src="./demo/vids_hi/qxw_i7.mp4" style="width:100%">
+        <video autoplay controls muted loop playsinline height="100%">
+          <source src="./demo/vids_hi/qxw_i7.mp4" type="video/mp4">
+        </video>
         <p style="text-align:center;">
           Orbiting camera at Intersection 14
         </p>
