--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="columns is-centered">
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
-          <video autoplay controls muted loop playsinline height="100%">
+          <video controls muted loop playsinline height="100%">
             <source src="./demo/vids_hi/i1_fix.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
@@ -85,7 +85,7 @@
       </div>
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
-          <video autoplay controls muted loop playsinline height="100%">
+          <video controls muted loop playsinline height="100%">
             <source src="./demo/vids_hi/i1.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
@@ -98,7 +98,7 @@
     <div class="columns is-centered">
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
-          <video autoplay controls muted loop playsinline height="100%">
+          <video controls muted loop playsinline height="100%">
             <source src="./demo/vids_hi/i2_fix.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
@@ -108,7 +108,7 @@
       </div>
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
-          <video autoplay controls muted loop playsinline height="100%">
+          <video controls muted loop playsinline height="100%">
             <source src="./demo/vids_hi/i2.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
@@ -121,7 +121,7 @@
     <div class="columns is-centered">
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
-          <video autoplay controls muted loop playsinline height="100%">
+          <video controls muted loop playsinline height="100%">
             <source src="./demo/vids_hi/i3_fix.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
@@ -131,7 +131,7 @@
       </div>
       <div class="column" style="padding-left: 2px; padding-right: 2px;">
         <div class="content">
-          <video autoplay controls muted loop playsinline height="100%">
+          <video controls muted loop playsinline height="100%">
             <source src="./demo/vids_hi/i3.mp4" type="video/mp4">
           </video>
           <p style="text-align:center;">
@@ -144,7 +144,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i4_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -154,7 +154,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i4.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -167,7 +167,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i5_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -177,7 +177,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i5.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -190,7 +190,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i6_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -200,7 +200,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i6.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -213,7 +213,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i7_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -223,7 +223,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i7.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -236,7 +236,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i8_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -246,7 +246,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i8.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -259,7 +259,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i9_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -269,7 +269,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/i9.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -282,7 +282,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i3_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -292,7 +292,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i3.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -305,7 +305,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i4_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -315,7 +315,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i4.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -328,7 +328,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i5_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -338,7 +338,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i5.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -351,7 +351,7 @@
   <div class="columns is-centered">
     <div class="column" style="padding-left: 2px; padding-right: 2px;">
       <div class="content" style="padding-bottom: 0px;">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i6_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -361,7 +361,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px; padding-bottom: 0px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i6.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -374,7 +374,7 @@
   <div class="columns is-centered" style="padding-top: 0px;">
     <div class="column" style="padding-left: 2px; padding-right: 2px; padding-top: 0px;">
       <div class="content" style="padding-bottom: 0px;">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i7_fix.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
@@ -384,7 +384,7 @@
     </div>
     <div class="column" style="padding-left: 2px; padding-right: 2px; padding-top: 0px;">
       <div class="content">
-        <video autoplay controls muted loop playsinline height="100%">
+        <video controls muted loop playsinline height="100%">
           <source src="./demo/vids_hi/qxw_i7.mp4" type="video/mp4">
         </video>
         <p style="text-align:center;">
